--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,22 @@ input::-webkit-inner-spin-button {
   padding: 10px 10px;
   border-radius: 5px;
 }
+
+
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
