--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 }
 
 body{
-
+  background:#f0efec;
+  padding: 25px;
+  margin: 0 auto;
   font-family: 'Rethink Sans', sans-serif;
 
 }
@@ -61,3 +63,154 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+
+
+
+
+
+.header {
+  background: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  margin-bottom: 25px;
+  border-radius: 8px;
+}
+
+.logo {
+  width: 160px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  background-image: url("assets/lime.svg");
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.user {
+  width: 160px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  /*background-image: url("assets/user.svg");*/
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+  text-decoration: none;
+  color: #ffffff;
+  fill: red;
+  position: relative;
+  z-index: 222;
+}
+
+.animation {
+  border: none;
+  position: relative;
+  z-index: 0;
+}
+
+.animation:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-4px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+}
+
+.animation:before {
+  opacity: 1;
+}
+
+.animation:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
+
+/*GRID CSS*/
+.grid-wrapper > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-wrapper > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  grid-auto-flow: dense;
+}
+
+.grid-wrapper .chart {
+  grid-row: span 3;
+  grid-column: span 4;
+}
+
+.grid-wrapper .wide {
+  grid-column: span 2;
+}
+
+.grid-wrapper .tall {
+  grid-row: span 2;
+}
+
+.grid-wrapper .big {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+/* bg - items */
+.bg {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  display: inline-block;
+  background: #ffffff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000000;
+  padding: 15px;
+  transition: 0.5s;
+}
+
+.bg:hover,
+.bg:focus {
+  transition: all 0.3s ease-in-out 0s;
+  box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+  transform: translateY(-10px);
+}
+
